mostly fixed dark mode

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -151,3 +151,11 @@
     }
   }
 }
+
+.night {
+  .nav__item {
+    a:after {
+      filter: invert(1);
+    }
+  }
+}
