--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -141,3 +141,7 @@
     }
   }
 }
+
+.night .post {
+  --color-mint: var(--color-marshmellow);
+}
